--- a/wsrvTienditaFeliz/wsrvTienditaFeliz/bin/wsrvTienditaFeliz.dll.config
+++ b/wsrvTienditaFeliz/wsrvTienditaFeliz/bin/wsrvTienditaFeliz.dll.config
@@ -10,7 +10,7 @@
 	</system.web>
 	<connectionStrings>
 		<add name="bdMercadoFeliz"
-			 connectionString="Server=localhost; Database=mercadofeliz; Uid=root; Pwd=root;"
+			 connectionString="Server=localhost; Database=mercadofeliz; Uid=root; Pwd=Marcelino07;"
 			 providerName="MySql.MySqlClient" />
 
 	</connectionStrings>
