--- a/wsrvTienditaFeliz/wsrvTienditaFeliz/Web.config
+++ b/wsrvTienditaFeliz/wsrvTienditaFeliz/Web.config
@@ -10,7 +10,7 @@
 	</system.web>
 	<connectionStrings>
 		<add name="bdMercadoFeliz"
-    connectionString="Server=localhost; Database=mercadofeliz; Uid=root; Pwd=Marcelino07;"
+    connectionString="Server=localhost; Database=mercadofeliz; Uid=root; Pwd=;"
     providerName="MySql.MySqlClient" />
 
 	</connectionStrings>
