--- a/wsrvTienditaFeliz/wsrvTienditaFeliz/bin/wsrvTienditaFeliz.dll.config
+++ b/wsrvTienditaFeliz/wsrvTienditaFeliz/bin/wsrvTienditaFeliz.dll.config
@@ -10,8 +10,8 @@
 	</system.web>
 	<connectionStrings>
 		<add name="bdMercadoFeliz"
-			 connectionString="Server=localhost; Database=mercadofeliz; Uid=root; Pwd=Marcelino07;"
-			 providerName="MySql.MySqlClient" />
+    connectionString="Server=localhost; Database=mercadofeliz; Uid=root; Pwd=;"
+    providerName="MySql.MySqlClient" />
 
 	</connectionStrings>
 
@@ -23,4 +23,8 @@
 
 
 	</system.codedom>
+<system.serviceModel>
+        <bindings />
+        <client />
+    </system.serviceModel>
 </configuration>
